# ESPP2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TAX.md  bootstrap-cache.sh  espp2.md  espp2holdings.py  espp_td_import.py  fmv.py  pyproject.toml  requirements.txt  schwab.py  setup.py  stocks.py  taxdata.json  trans.py
.github/workflows/: main.yml
espp2/: __init__.py  cash.py  console.py  data.json  datamodels.py  espp2.py  espp2_wrapper.py  excel_report.py  fmv.py  genholdings.py  holdinator.py  holdings_old2new.py  main.py  portfolio.py  positions.py  report.py  taxdata.json  transactions.py  transnorm.py  util.py  vault.py
espp2/data/: CURRENCY_USD.json  DIVIDENDS_CSCO.json  DIVIDENDS_SEAM.json  FUNDAMENTALS_CSCO.json  FUNDAMENTALS_SEAM.json  STOCK_CSCO.json  STOCK_SEAM.json
espp2/plugins/: csco_espp_purchases.py  csco_stock_transactions.py  morgan.py  pickle.py  schwab-individual.py  schwab-json.py  schwab.py  schwab2.py  td.py
espp2/web/: main.py  test_web.py
espp2/web/public/: index.html
misc/: espp.patch
scripts/: recreate-holdings.py
test/: My_ESPP_Purchases.xlsx  My_ESPP_Transactions.xlsx  My_Stock_Transactions.xlsx  espp.pickle  schwab.csv  schwab1.json  td.csv  td2.csv  test_aksjonaermodellen.py  test_cash.py  test_pickle_import.py  test_schwab_import.py  test_stocks.py  test_tax.py  test_td_import.py  test_wire_matching.py
test/aksjonaermodellen/: EquityAwardsCenter_Transactions-1901.json  EquityAwardsCenter_Transactions-1902.json  EquityAwardsCenter_Transactions-1903.json  EquityAwardsCenter_Transactions-1904.json
test/data/user1/: wires-2024.json
test/data/user2/: EquityAwardsCenter_Transactions_20250310133230.json  espp-holdings-2022.json
test/snapshots/test_stocks/test_holdings_consistency_between_generated_holdings_and_previous_year_transaction_file/: holdings_consistency_snapshot_user2  tax_report_2024_snapshot
test/snapshots/test_stocks/test_holdings_consistency_for_all_users/: holdings_consistency_snapshot_user  holdings_consistency_snapshot_user1  holdings_consistency_snapshot_user2
test/testfiles/user1/: EquityAwardsCenter_Transactions_2024.json  EquityAwardsCenter_Transactions_20250306113044.json  espp-holdings-2023.json
test/testfiles/user2/: EquityAwardsCenter_Transactions_2024.json  espp-holdings-2023.json
