[build-system]
requires = ["setuptools","setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.pylint.main]

[tool.pylint.basic]

[tool.pylint."messages control"]
disable = ["missing-function-docstring", "missing-module-docstring", "missing-class-docstring", "too-few-public-methods"]

[tool.setuptools_scm]
local_scheme = "node-and-date"
version_scheme = "no-guess-dev"
tag_regex = "^espp(?P<version>[0-9]+)$"

[tool.setuptools]
packages = ['espp2']

[tool.setuptools.package-data]
espp2 = ["data/*"]

[project]
name = "espp2"
description="A tax tool for ESPP/RSU and foreignly held shares"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = [
    "pydantic",
    "requests",
     "simplejson", "pydantic", "pandas",
    "urllib3", "python-dateutil", "uvicorn", "fastapi",
    "python-multipart", "tabulate", "httpx", "pytest",
    "rich", "typing", "html5lib", "typer", "openpyxl",
    "setuptools-scm",
]
authors = [
    { name = "Ole Troan", email = "otroan@employees.org"},
]
readme = "README.md"

[project.urls]
repository = "https://github.com/otroan/ESPP2"

[project.scripts]
espp2 = "espp2.espp2:app"
holdinator = "espp2.holdinator:app"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

# Or if you're using the older format with poetry:
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^8.0.0"

[tool.flake8]
max-line-length = 120
ignore = ["E501"]
